# comments_tonal_analysis

./: README.md  analysis_using_BERT.ipynb  analysis_using_TFIDF.ipynb  pyproject.toml
